# 05_approval_demo

./: .gitignore  README.md  project_summary.md  pyproject.toml  requirements.txt  setup.cfg
src/approval_demo/: prettyworld.py
tests/: test_prettyworld.py  test_prettyworld.test_approval.approved.txt  test_prettyworld.test_with_date_scrubbers.approved.txt
