[metadata]
name = approval_demo
version = attr: approval_demo.__version__
author = Marc DEXET
author_email = marc.dexet@cnrs.fr
description = Framework to send messages by SMS
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)

[options]
package_dir =
    =src
packages = find:
python_require = >= 3.8
install_requires =


[options.extras_require]
doc = sphinx
      sphinx-autoapi
      sphinx-rtd-theme
      myst-parser
      sphinx-argparse
dev = pytest
      coverage
      pytest-sugar
      pytest-watcher
      approvaltests
      pytest-approvaltests
      black
release = build
          twine

[options.packages.find]
where = src
exclude = apidocs
          docs
          tests*
          scripts
          dist

[options.entry_points]
console_scripts =
    approval_demo=approval_demo.scripts.main:approval_demo
